--- a/gallery.html
+++ b/gallery.html
@@ -27,10 +27,10 @@
 
             <h2>추가 사진 갤러리</h2>
             <div class="gallery four-cols">
-                <img src="monthly_08.jpg" alt="월간지 8월 추가">
-                <img src="monthly_09.jpg" alt="월간지 9월 추가">
-                <img src="monthly_10.jpg" alt="월간지 10월 추가">
-                <img src="monthly_11.jpg" alt="월간지 11월 추가">
+                <img src="photo_01.jpg" alt="월간지 8월 추가">
+                <img src="photo_02.jpg" alt="월간지 9월 추가">
+                <img src="photo_03.jpg" alt="월간지 10월 추가">
+                <img src="photo_04.jpg" alt="월간지 11월 추가">
             </div>
         </main>
 
@@ -40,3 +40,4 @@
     </div>
 </body>
 </html>
+
