--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <main>
             <h2>소개</h2>
-            <p>문예부 활동으로 쓴 글과 사진 그리고 월간지등 올라오는 문예부 공식 홈페이지입니다. 잘 부탁드리겠습니다.</p>
+            <p>문예부 활동으로 쓴 글과 사진 그리고 월간지등이 올라오는 문예부 공식 홈페이지입니다. 잘 부탁드리겠습니다.</p>
         </main>
 
         <footer>
@@ -27,4 +27,5 @@
     </div>
 </body>
 </html>
+
 
