Add December image to monthly gallery
Added an image for December in the monthly gallery.

--- a/gallery.html
+++ b/gallery.html
@@ -23,6 +23,7 @@
                 <img src="monthly_09.jpg" alt="월간지 9월">
                 <img src="monthly_10.jpg" alt="월간지 10월">
                 <img src="monthly_11.jpg" alt="월간지 11월">
+                <img src="monthly_12.jpg" alt="월간지 12월">
             </div>
 
             <h2>추가 사진 갤러리</h2>
@@ -40,3 +41,4 @@
     </div>
 </body>
 </html>
+
