Enhance index.html with additional homepage content
Added additional content to the main section, including details about the homepage and its creation using HTML and CSS.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,23 @@
         <main>
             <h2>소개</h2>
             <p>문예부 활동으로 쓴 글과 사진 그리고 월간지등이 올라오는 문예부 공식 홈페이지입니다.<br>
-                잘 부탁드리겠습니다.</p>
+                잘 부탁드리겠습니다.<br>
+                <br>
+            11월 월간지에서 처음 공개된 문예부의 공식 홈페이지입니다.<br>
+ 이 홈페이지에서는 지금까지의 문예부<br>
+활동과작품을 확인할 수 있으며,<br>
+ 사진 갤러리를 통해 1년 동안의 2반을 추억할<br>
+ 수 있는 사진들을 볼 수 있습니다.<br>
+이 홈페이지는 HTML과 CSS를 사용해 제작되었는데<br>
+ HTML은 홈페이지의 기본 구조를 담당하며,<br>
+ 제목, 글, 사진, 메뉴 같은 요소들이 들어갈 자리를<br>
+만들어주는 역할을 합니다. 그리고<br>
+CSS는 HTML로 만든 구조에 디자인을 입히는 역할을 합니다.<br>
+ 글씨 크기와 색상, 배경 색, 사진의 배치와 간격 등을 조절해<br>
+ PC와 휴대폰 등 다양한 화면에서도 보기<br>
+좋게보이도록 구성했습니다.<br>
+이러한 방식으로 문예부의 활동과 작품을 정리한<br>
+ 홈페이지를 직접 제작하였습니다. </p>
         </main>
 
         <footer>
@@ -28,6 +44,7 @@
     </div>
 </body>
 </html>
+
 
 
 
