--- a/works.html
+++ b/works.html
@@ -27,8 +27,8 @@
                         햇살은 부드럽게 내려앉고<br>
                         손을 맞대지 않아도 마음이 통한다<br>
                         구름은 느린 걸음으로 하늘을 걷고<br>
-                        작은 순간마다 우리의 기억이 빛난다
-                    <br></li>
+                        작은 순간마다 우리의 기억이 빛난다<br> <br>
+                    </li>
                     <li>수필1: 추가중...</li><br>
                     <li>단편소설1: 추가중...</li>
                 </ul>
@@ -41,6 +41,7 @@
     </div>
 </body>
 </html>
+
 
 
 
