--- a/works.html
+++ b/works.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
@@ -21,7 +21,8 @@
                 <h2>글</h2>
                 <ul class="works-list">
                     <li class="poem-title">시1: 가을의 길목에서</li>
-                    <li>가을바람은 살며시 스며들고<br>
+                    <li style="text-align: center;">
+                        가을바람은 살며시 스며들고<br>
                         여름은 조용히 사라지고<br>
                         친구들의 웃음은 공기 속에 퍼진다<br>
                         햇살은 부드럽게 내려앉고<br>
@@ -41,6 +42,7 @@
     </div>
 </body>
 </html>
+
 
 
 
