--- a/works.html
+++ b/works.html
@@ -21,7 +21,7 @@
                 <h2>글</h2>
                 <ul class="works-list">
                     <li class="poem-title">시1: 가을의 길목에서</li>
-                    <li class="poem-body"><li>
+                    <li class="poem-body">
                         가을바람은 살며시 스며들고<br>
                         여름은 조용히 사라지고<br>
                         친구들의 웃음은 공기 속에 퍼진다<br>
@@ -42,6 +42,7 @@
     </div>
 </body>
 </html>
+
 
 
 
