--- a/works.html
+++ b/works.html
@@ -31,7 +31,7 @@
                         작은 순간마다 우리의 기억이 빛난다<br> <br>
                     </li>
                     <li class="poem-title">수필1: 추가중...</li><br>
-                    <li>단편소설1: 추가중...</li>
+                    <li class="poem-title">단편소설1: 추가중...</li>
                 </ul>
             </section>
         </main>
@@ -42,6 +42,7 @@
     </div>
 </body>
 </html>
+
 
 
 
