--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
         <main>
             <h2>소개</h2>
             <p>문예부 활동으로 쓴 글과 사진 그리고 월간지등이 올라오는 문예부 공식 홈페이지입니다.<br>
-                잘 부탁드리겠습니다.<br></p>
-                <br>
+                잘 부탁드리겠습니다.</p>
             <p class="center">
 11월 월간지에서 처음 공개된 문예부의 공식 홈페이지입니다.<br>
  이 홈페이지에서는 지금까지의 문예부<br>
@@ -45,6 +44,7 @@ CSS는 HTML로 만든 구조에 디자인을 입히는 역할을 합니다.<br>
     </div>
 </body>
 </html>
+
 
 
 
